--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,8 +3,10 @@
 # Need check updates
 check-updates: true
 
-# Season duration in days
 season:
+  # Reset type: MONTH_START (reset at beginning of month) or DURATION (reset after X days)
+  reset-type: "DURATION"
+  # Season duration in days (only used when reset-type is DURATION)
   duration: 30
   # Whether to reset battle coins when season ends
   reset-coins-on-season-end: true
